@@ -33,8 +33,8 @@
     allowed text/x-rst
     allowed text/html
     allowed text/plain
-    allowed text/plain-pre
-    allowed text/python-source
+    #allowed text/plain-pre
+    #allowed text/python-source
   </contenttypes>
 </archetype>
 
@@ -49,7 +49,7 @@
     allowed text/x-rst
     allowed text/html
     allowed text/plain
-    allowed text/plain-pre
+    #allowed text/plain-pre
   </contenttypes>
 </archetype>
 
@@ -71,7 +71,7 @@
     allowed text/x-rst
     allowed text/html
     allowed text/plain
-    allowed text/plain-pre
+    #allowed text/plain-pre
   </contenttypes>
 </archetype>
 
